# slicex

./: .gitignore  LICENSE  README.md  analyze_styles.py  create_test_video.py  extract_features.py  generate_template.py  process_nick_videos.py  requirements.txt  setup.cfg  setup.py  test_pipeline.py
.github/workflows/: python-package.yml
models/: label_encoder.joblib
models/style_classifier/: scaler.joblib  selected_features.txt  video_style_model.joblib
nick_style_analysis/: analysis_report.txt
scripts/: aggregate_features.py  analyze_motion.py  detect_broll.py  detect_scene_broll.py  detect_scenes.py  download_videos.py  extract_audio_features.py  extract_metadata.py  extract_scene_cuts.py  feature_extraction.py  flatten_json.py  integrate_broll.py  integrate_broll_metadata.py  list_scene_cuts.py  predict_style.py  predict_style_sklearn.py  summarize_broll.py  train_model.py  validate_schema.py  visualize_broll_stats.py
tests/: __init__.py  test_metadata_extraction.py
