[metadata]
description-file = README.md
license_files = LICENSE

[options]
package_dir =
    = .
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.8, <3.11

[options.packages.find]
include = scripts*

test_suite = tests

[flake8]
max-line-length = 127
max-complexity = 10
ignore = E226,E302,E41
exclude = .git,__pycache__,build,dist,.venv,venv

[isort]
line_length = 127
include_trailing_comma = True
multi_line_output = 3
known_first_party = scripts
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[tool:pytest]
testpaths = tests
addopts = -v --cov=scripts --cov-report=term-missing
python_files = test_*.py

[egg_info]
tag_build = 
tag_date = 0

[aliases]
test = pytest
